fix: Traducción: Botones -> Buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- END CONTAINERS -->
 
   <!-- BUTTONS TITLE -->
-  <h1>Botones</h1>
+  <h1>Buttons</h1>
   <hr>
   <!-- END BUTTONS TITLE -->
 
